<resources>
    <string name="app_name">PT3_BOUTIKAR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_weight">Weight</string>
    <string name="menu_feeling">Feeling</string>
    <string name="menu_measurement">Measurement</string>
    <string name="menu_sleep">Sleep</string>
    <string name="menu_persons">Persons</string>
    <string name="menu_activities">Activities</string>

</resources>