<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_weight"
            android:icon="@drawable/ic_menu_weight"
            android:title="@string/menu_weight" />
        <item
            android:id="@+id/nav_feeling"
            android:icon="@drawable/ic_menu_heart"
            android:title="@string/menu_feeling" />
        <item
            android:id="@+id/nav_measurement"
            android:icon="@drawable/ic_menu_measurement"
            android:title="@string/menu_measurement" />
        <item
            android:id="@+id/nav_sleep"
            android:icon="@drawable/ic_menu_sleep"
            android:title="@string/menu_sleep" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_menu_activities"
            android:title="@string/menu_activities" />
    </group>
</menu>